# Voxelands

./: .gitignore  CMakeLists.txt  Makefile  README.txt  minetest-classic.desktop  minetest.conf.example  voxelands.conf.example  voxelands.desktop
.tx/: config
cmake/Modules/: FindGettextLib.cmake  FindJthread.cmake  FindVorbis.cmake
data/html/: footer.html  header.html
data/models/: character.b3d  character.x  doe.x  kitty.b3d  rat.x  sheared_sheep.b3d  sheep.b3d  stag.b3d  stag.x
doc/: changelog.txt  formspec.txt  voxelands-server.6  voxelands.6
misc/freedesktop/: voxelands.desktop
misc/mac/: Info.plist  MainMenu.xib  makeicns.sh  makelibbundle.sh  makeplist.sh
po/: voxelands.pot
po/da/: voxelands.po
po/de/: voxelands.po
po/es/: voxelands.po
po/fr/: voxelands.po
po/it/: voxelands.po
po/ja/: voxelands.po
po/jbo/: voxelands.po
po/nl/: voxelands.po
po/pl/: voxelands.po
po/pt_BR/: voxelands.po
po/ro/: voxelands.po
po/ru/: voxelands.po
po/vi/: voxelands.po
src/: CMakeLists.txt  MyBillboardSceneNode.cpp  MyBillboardSceneNode.h  activeobject.h  auth.cpp  auth.h  ban.cpp  ban.h  base64.cpp  camera.cpp  camera.h  character_creator.cpp  character_creator.h  circuit.cpp  circuit.h  client.cpp  client.h  clientobject.cpp  clientobject.h  clientserver.h  clouds.cpp  clouds.h  cmake_config.h.in  collision.cpp  collision.h  common_irrlicht.h  config.h  connection.cpp  connection.h  constants.h  content_cao.cpp  content_cao.h  content_clothesitem.cpp  content_clothesitem.h  content_craft.cpp  content_craft.h  content_craftitem.cpp  content_craftitem.h  content_inventory.cpp  content_inventory.h  (+154 more)
src/cguittfont/: CGUITTFont.cpp  irrUString.h  xCGUITTFont.h
src/jthread/: CMakeLists.txt
util/: api.php  build-w32.sh  colors.txt  minetestmapper.py  up2date.sh  updatepo.sh  updatepot.sh
